rearrange auton trajectory calc